[build-system]
# Note: pysam is NOT included here because it needs to be installed first
# Users should install: pip install pysam, then pip install pysamstats
# Or when installing from GitHub, pip will handle this via install_requires
requires = ["setuptools>=59.0", "wheel", "Cython>=0.29.12,<4", "numpy"]
build-backend = "setuptools.build_meta"

[tool.pysamstats]
name='pysamstats'
author='Alistair Miles'
author_email='alimanfoo@googlemail.com'
url='https://github.com/alimanfoo/pysamstats'
license='MIT Licenses'
description="""A Python utility for calculating statistics against genome 
            position based on sequence alignments from a SAM, 
            BAM or CRAM file."""
scripts=['scripts/pysamstats']
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
